--- a/drupal-vue/src/assets/base.css
+++ b/drupal-vue/src/assets/base.css
@@ -59,9 +59,10 @@
 }
 
 #searchstax-studio-vue-app {
+  padding-top: 0.5rem;
   min-height: 100vh;
   color: var(--color-text);
-  background: var(--color-background);
+  background: #fbf5ee;
   transition:
     color 0.5s,
     background-color 0.5s;
