--- a/drupal-vue/src/assets/style.css
+++ b/drupal-vue/src/assets/style.css
@@ -9,114 +9,183 @@ b {
 
 h3 {
   font-size: 22px;
-  font-weight: 400;
+  font-weight: 600;
 }
 
+nav {
+  display: flex;
+  justify-content: space-between;
+  padding: 0.5rem 2rem;
+  border-bottom: thin solid #ddd;
+}
+nav a {
+  text-decoration: none;
+  color: #18181B;
+}
+nav h3 {
+  text-decoration: none;
+  padding: 0.5rem 0 0 0;
+}
+
+.searchstax-search-input {
+  padding: 0.5rem 1rem;
+  min-width: 400px;
+  border-radius: 6px;
+  border: thin solid #ddd;
+}
+.searchstax-result-item-link:hover {
+  background-color: transparent !important;
+}
+.searchstax-search-input-container {
+  display: flex;
+  padding: 0.5rem 1rem;
+  border-radius: 6px;
+  height: auto !important;
+  background-color: #FFF;
+}
+
+.searchstax-autosuggest-container {
+  box-shadow: none !important;
+}
+
+.searchstax-search-input-wrapper button {
+  position: absolute;
+  right: 10px;
+  top: 5px;
+}
+.searchstax-autosuggest-item-term-container {
+  margin-top: -20px;
+  min-width: 460px !important;
+  background: #fff;
+  border: thin solid #ddd;
+  position: absolute;
+  z-index: 1;
+  border-radius: 0px 0px 6px 6px;
+}
+.searchstax-autosuggest-item-term-container:hover {
+  color: #18181B !important;
+}
+.searchstax-autosuggest-item:hover {
+  cursor: pointer;
+}
+
+.searchstax-page-layout-container {
+  max-width: 1280px;
+  margin: auto;
+}
 .searchstax-page-layout-facet-result-container {
+  padding: 2rem 0;
+  margin: 0 !important;
+}
+
+.searchstax-page-layout-facet-result-container, .search-details-container {
   display: flex;
   justify-content: space-between;
 }
 
-.searchstax-search-input-container {
-  width: 50%;
-  height: auto !important;
-  margin: auto;
-  font-size: 22px;
-  font-weight: 300;
-  box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.35) !important;
-  border-radius: 6px !important;
+.searchstax-search-results {
+  display: grid;
+  grid-template-columns: repeat(3, minmax(30%, 1fr));
+  gap: 20px;
+  margin: 20px auto;
 }
+
 .searchstax-search-result {
-  display: flex;
-  flex-direction: row;
-  border-radius: 8px;
+  text-decoration: none;
+  background: #fff;
+  border: thin solid #ddd;
+  border-radius: 6px;
+  box-shadow: none;
+  margin-bottom: 0;
+  padding: 1rem;
+  min-height: 350px;
   overflow: hidden;
-  padding: 0 !important;
-  height: 180px;
+}
+.searchstax-search-result:hover {
+  border: thin solid #18181B;
 }
 .searchstax-search-result-image-container {
   width: 250px !important;
-  height: unset !important;
-  overflow: unset !important;
-}
-.searchstax-search-result-content {
-  flex: 2;
-  padding: 1rem;
-}
-.searchstax-search-result-ribbon {
-  all: unset !important;
-  font-size: 10px !important;
-}
-.searchstax-search-result-title-wrapper {
-  display: flex;
-  justify-content: space-between;
-  align-items: baseline;
-}
-.searchstax-search-result-title {
-  font-weight: 600;
-  font-size: 14px !important;
-  line-height: 1.2rem;
-  text-transform: uppercase;
-}
-.searchstax-search-result-description {
-  margin-top: 20px;
-}
-.searchstax-search-result:hover {
-  cursor: pointer;
-  box-shadow: 1px 1px 5px 3px rgba(0, 0, 0, 0.25);
-}
-.searchstax-autosuggest-container {
-  margin-top: 55px !important;
-  border-radius: 0px 0px 10px 10px;
+  height: 250px !important;
 }
 .searchstax-result-image {
   display: block;
   height: 100% !important;
   object-fit: cover;
 }
-.searchstax-facet-title {
-  font-weight: 600;
-  margin-bottom: 10px;
+.searchstax-search-result-description {
+  margin: 20px 0px;
 }
-.searchstax-facet-value-container {
-  margin-bottom: 5px;
+.searchstax-search-result-action {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  margin: 10px;
 }
-.searchstax-facet-value-label {
-  text-transform: capitalize !important;
-}
-.searchstax-facet-value-count {
-  font-weight: 600 !important;
-}
-.searchstax-related-searches-container {
-  margin-top: 40px;
-}
-.searchstax-related-search {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 20px;
-  margin: 10px 0 20px 0;
-}
-.searchstax-related-search-item {
-  color: #111 !important;
-  font-weight: 500;
-}
-.searchstax-related-search-item:hover {
-  color: #fc6730 !important;
+.searchstax-search-result-action button {
+  min-height: auto;
+  min-width: auto;
+  line-height: 20px;
+  text-align: center;
+  padding: 6px 24px;
+  font-size: 14px;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
 }
 
-.searchstax-facets-pill-filter-by {
-  height: auto !important;
-}
-
-.search-details-container {
-  margin-top: 40px !important;
-  justify-content: space-between;
+#searchstax-facets-container {
+  margin-top: 30px;
 }
 
 .feedback-container {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 20px;
+}
+
+.skills {
+  margin: 1rem 0 2rem 0;
+}
+.skills label {
+  font-weight: 600;
+}
+
+.apply-btn {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  border: none;
+  padding: 0.5rem 2rem;
+  border-radius: 4px;
+  font-size: 14px;
+  font-weight: 600;
+}
+.apply-btn:hover {
+  cursor: pointer;
+}
+
+.btn-primary {
+  background-color: #18181B;
+  color: #fff;
+}
+.btn-outline {
+  background: #fff;
+  border: thin solid #ddd !important;
+}
+.btn-outline:hover {
+  border: thin solid #18181B !important;
+}
+
+.searchstax-search-result-ribbon {
+  all: unset !important;
+}
+
+.promoted {
+  background: #f4e0ae;
+  border: thin solid #eac15a;
+}
+.promoted .pill {
+  background: #fff;
 }
 
 .pill {
@@ -126,18 +195,64 @@ h3 {
   font-size: 10px;
   font-weight: 600;
   margin-right: 10px;
-  white-space: nowrap;
 }
 
-@media (min-width: 37.5em) {
-  .container {
-    width: calc(37.5em + ((100% - 37.5em) * .7));
-  }
+.searchstax-facet-value-container {
+  margin-bottom: 5px;
 }
-@media screen and (max-width: 767px) {
-  .searchstax-search-input-container {
-    width: 100%;
-  }
+
+.searchstax-facet-title-container {
+  color: #18181B !important;
+  font-weight: 600;
+  margin-bottom: 20px !important;
+}
+
+.searchstax-facet-show-more-button, .searchstax-facet-show-less-button {
+  color: #18181B !important;
+  font-weight: 600;
+  margin-top: 15px !important;
+}
+
+.searchstax-related-searches-container {
+  margin-top: 10px;
+}
+.searchstax-related-searches-container h3 {
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+
+.searchstax-related-search {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.searchstax-related-search-item {
+  text-transform: capitalize;
+  color: #18181B !important;
+  border: thin solid #ddd;
+  border-radius: 50px;
+  padding: 0.25rem 0.75rem;
+}
+.searchstax-related-search-item:hover {
+  cursor: pointer;
+  color: #fff !important;
+  background: #444449;
+  border: thin solid #18181B;
+}
+
+.searchstax-search-result-content {
+  min-height: 100px;
+  overflow: hidden;
+}
+
+.searchstax-pagination-content .disabled {
+  color: #99a2ac !important;
+  font-weight: 300;
+}
+.searchstax-pagination-content a {
+  color: #18181B !important;
+  font-weight: 600;
 }
 
 /*# sourceMappingURL=style.css.map */
